[package]
name = "volumed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = [ "derive" ] }
ctrlc = "3.2.3"
env_logger = "0.10.0"
futures-util = "0.3.25"
log = "0.4.17"
lvm2_cmd = { git = "https://github.com/nicholascioli/lvm2_cmd" }
prost = "0.11.3"
prost-types = "0.11.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = [ "fs", "macros", "rt-multi-thread" ] }
tokio-stream = {version = "0.1.11", features = ["net"]}
tonic = "0.8.3"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.8.4"
